k8s/jobmanager-session-deployment-non-ha.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flink-jobmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flink
      component: jobmanager
  template:
    metadata:
      labels:
        app: flink
        component: jobmanager
    spec:
      imagePullSecrets:
        - name: psnc-registry-credentials
      containers:
        - name: jobmanager
          image: registry.paas.psnc.pl/ecloud-poc/flink-rich-node-poc:latest
          imagePullPolicy: Always
          args: ["jobmanager"]
          ports:
            - containerPort: 6123
              name: rpc
            - containerPort: 6124
              name: blob-server
            - containerPort: 8081
              name: webui
          livenessProbe:
            tcpSocket:
              port: 6123
            initialDelaySeconds: 30
            periodSeconds: 60
          volumeMounts:
            - name: flink-config-volume
              mountPath: /opt/flink/conf
            - name: jobs-config
              mountPath: /jobs-config
            - name: job-manager-checkpoints-volume-claim
              mountPath: /data/flink/checkpoints
          securityContext:
            runAsUser: 9999  # refers to user _flink_ from official flink image, change if necessary
      volumes:
        - name: flink-config-volume
          configMap:
            name: flink-config
            items:
              - key: flink-conf.yaml
                path: flink-conf.yaml
              - key: log4j-console.properties
                path: log4j-console.properties
        - secret:
            secretName: jobs-config
          name: jobs-config
        - name: job-manager-checkpoints-volume-claim
          persistentVolumeClaim:
            claimName: job-manager-checkpoints-volume-claim
