k8s/jobmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flink-jobmanager
spec:
  rules:
    - host: flink-jobmanager-192.168.49.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flink-jobmanager
                port:
                  number: 8081
